Build client onboarding and fulfillment SaaS with team sync

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,3 @@
 PORT=3001
 DATABASE_URL=postgresql://postgres:<password>@<project-ref>.supabase.co:5432/postgres
-CORS_ORIGIN=https://private-business-finance-os.vercel.app
+CORS_ORIGIN=http://localhost:8081,https://your-frontend-domain.com
